--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -115,6 +115,9 @@
       width: 87.5%
     &__title
       margin-bottom: 37px
+      max-width: 100%
+  .subscribe
+    max-width: 100%
   .reviews
     &__title
       font-size: 26px
