--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -15,13 +15,13 @@
     display: flex
     justify-content: space-between
     align-items: center
-    flex-wrap: wrap
     max-width: 731px
     margin: auto
   &-title
     display: flex
     flex-direction: column
     flex-wrap: wrap
+    max-width: 50%
     margin: 0
     color: $light
     font-weight: 300
@@ -38,6 +38,7 @@
 .subscribe
   position: relative
   width: 350px
+  max-width: 50%
   height: 55px
   border-radius: 4px
   overflow: hidden
@@ -62,6 +63,7 @@
     min-width: 65px
     max-width: 100px
     border: none
+    outline: none
     background-color: $primary
     cursor: pointer
     font-weight: bold
